Remove JDK 8 unsupported code (#11176)